# bc_learning_sound

./: .gitignore  dataset.py  main.py  opts.py  pyproject.toml  run_train.sh  train.py  utils.py
dataset_gen/: emodb_gen.py  emovo_gen.py  esc_gen.py  savee_gen.py  shemo_gen.py  urbansound_gen.py  urdu_gen.py  urdu_ser.py
models/: convbnrelu.py  envnet.py  envnetv2.py
